--- a/bitrise.yml
+++ b/bitrise.yml
@@ -23,7 +23,7 @@ workflows:
           but the step would use the default value specified in the `step.yml`
           file if you would not specify another value.
         inputs:
-        - example_step_input: Example Step Input's value
+        - info_plist_path: ./_tmp/TestProject/Info.plist
 
 
   # ----------------------------------------------------------------
@@ -31,10 +31,10 @@ workflows:
   share-this-step:
     envs:
       # if you want to share this step into a StepLib
-      - MY_STEPLIB_REPO_FORK_GIT_URL:
-      - STEP_ID_IN_STEPLIB:
-      - STEP_GIT_VERION_TAG_TO_SHARE:
-      - STEP_GIT_CLONE_URL:
+      - MY_STEPLIB_REPO_FORK_GIT_URL: https://github.com/tadija/bitrise-steplib.git
+      - STEP_ID_IN_STEPLIB: xcode-project-info
+      - STEP_GIT_VERION_TAG_TO_SHARE: 1.0.0
+      - STEP_GIT_CLONE_URL: https://github.com/tadija/bitrise-step-xcode-project-info.git
     description: |-
       If this is the first time you try to share a Step you should
       first call: $ bitrise share
