--- a/bitrise.yml
+++ b/bitrise.yml
@@ -28,6 +28,15 @@ workflows:
 
   # ----------------------------------------------------------------
   # --- workflows to Share this step into a Step Library
+  audit-this-step:
+    steps:
+    - script:
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+            stepman audit --step-yml ./step.yml
+          
   share-this-step:
     envs:
       # if you want to share this step into a StepLib
@@ -56,6 +65,8 @@ workflows:
 
       Once it finishes the only thing left is to actually create a Pull Request,
       the way described in the guide printed at the end of the process.
+    before_run:
+    - audit-this-step
     steps:
     - script:
         inputs:
