--- a/step.yml
+++ b/step.yml
@@ -13,8 +13,7 @@ host_os_tags:
 project_type_tags:
   - ios
 type_tags:
-  - xcode
-  - versioning
+  - artifact-info
 is_requires_admin_user: true
 is_always_run: false
 is_skippable: false
